[gd_scene load_steps=3 format=3 uid="uid://dt11u8v3ea2qe"]

[ext_resource type="Script" path="res://addons/gd_data/scripts/update_column_dialog.gd" id="1_8j4yp"]
[ext_resource type="PackedScene" path="res://addons/gd_data/scenes/editor_code_edit.tscn" id="2_bh8l0"]

[node name="UpdateColumnDialog" type="ConfirmationDialog"]
title = "Create column"
size = Vector2i(1000, 242)
visible = true
min_size = Vector2i(1000, 70)
ok_button_text = "Create"
dialog_hide_on_ok = false
dialog_close_on_escape = false
script = ExtResource("1_8j4yp")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 8.0
offset_right = -1081.0
offset_bottom = -974.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
offset_left = 8.0
offset_top = 8.0
offset_right = 976.0
offset_bottom = 177.0
grow_horizontal = 2
grow_vertical = 2

[node name="KeyContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
offset_right = 968.0
offset_bottom = 31.0

[node name="KeyLabel" type="Label" parent="MarginContainer/VBoxContainer/KeyContainer"]
layout_mode = 2
offset_top = 2.0
offset_right = 482.0
offset_bottom = 28.0
size_flags_horizontal = 3
text = "Key"

[node name="KeyEdit" type="LineEdit" parent="MarginContainer/VBoxContainer/KeyContainer"]
unique_name_in_owner = true
layout_mode = 2
offset_left = 486.0
offset_right = 968.0
offset_bottom = 31.0
size_flags_horizontal = 3

[node name="EditableContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
offset_top = 35.0
offset_right = 968.0
offset_bottom = 61.0

[node name="EditableLabel" type="Label" parent="MarginContainer/VBoxContainer/EditableContainer"]
layout_mode = 2
offset_right = 482.0
offset_bottom = 26.0
size_flags_horizontal = 3
text = "Editable"

[node name="EditableCheckBox" type="CheckBox" parent="MarginContainer/VBoxContainer/EditableContainer"]
unique_name_in_owner = true
layout_mode = 2
offset_left = 486.0
offset_right = 968.0
offset_bottom = 26.0
size_flags_horizontal = 3
button_pressed = true

[node name="TypeContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
offset_top = 65.0
offset_right = 968.0
offset_bottom = 96.0

[node name="TypeLabel" type="Label" parent="MarginContainer/VBoxContainer/TypeContainer"]
layout_mode = 2
offset_top = 2.0
offset_right = 482.0
offset_bottom = 28.0
size_flags_horizontal = 3
text = "Type"

[node name="TypeButton" type="OptionButton" parent="MarginContainer/VBoxContainer/TypeContainer"]
unique_name_in_owner = true
layout_mode = 2
offset_left = 486.0
offset_right = 968.0
offset_bottom = 31.0
size_flags_horizontal = 3
item_count = 7
selected = 0
popup/item_0/text = "Text"
popup/item_0/id = 0
popup/item_1/text = "Number"
popup/item_1/id = 1
popup/item_2/text = "Bool"
popup/item_2/id = 2
popup/item_3/text = "Color"
popup/item_3/id = 3
popup/item_4/text = "File"
popup/item_4/id = 4
popup/item_5/text = "Reference"
popup/item_5/id = 5
popup/item_6/text = "Object"
popup/item_6/id = 6

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
offset_top = 100.0
offset_right = 968.0
offset_bottom = 165.0

[node name="ExpressionLabel" type="Label" parent="MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
offset_right = 968.0
offset_bottom = 26.0
text = "Default expression"

[node name="ExpressionEdit" parent="MarginContainer/VBoxContainer/VBoxContainer" instance=ExtResource("2_bh8l0")]
layout_mode = 2
offset_top = 30.0
offset_right = 968.0
offset_bottom = 65.0
text = "\"\""

[node name="SettingsContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
offset_top = 169.0
offset_right = 968.0
offset_bottom = 169.0
